--- a/templates/notebook-title.template
+++ b/templates/notebook-title.template
@@ -1,3 +1,3 @@
-<div class="notebook">
+<div class="notebook" notebook_id=<%= notebook.id %>>
   <p class="notebook-title"><%= notebook.title %></p>
 </div>
